# mcp-server-oci

./: .gitignore  DYNAMIC_PROFILE_SELECTION.md  ERROR_HANDLING_PATTERN.md  EXAMPLE_ERROR_HANDLING.py  README.md  README_COMPREHENSIVE.md  claude_config.json  claude_config_uv.json  cleanup.sh  explore_mcp_module.py  inspect_server.py  install.sh  pyproject.toml
.claude/: settings.local.json
mcp_server_oci/: .gitignore  __init__.py  __main__.py  cli.py  config.py  direct_api.py  mcp_server.py  profile_manager.py  server.py  utils.py
mcp_server_oci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_server_oci/tools/: __init__.py  compartments.py  cost.py  database.py  dbsystems.py  identity.py  instances.py  load_balancer.py  monitoring.py  network.py  networking.py  oke.py  resources.py  security.py  storage.py
