[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-oci"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Oracle Cloud Infrastructure"
authors = [{name = "MCP OCI Server Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git",
    "oci>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[project.scripts]
mcp-server-oci = "mcp_server_oci.mcp_server:main"

[tool.setuptools]
packages = ["mcp_server_oci", "mcp_server_oci.tools"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100